--- a/be/package.json
+++ b/be/package.json
@@ -12,5 +12,10 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "ethers": "^6.15.0",
+    "express": "^5.1.0"
   }
 }
