--- a/Frontend/open-wallet/package.json
+++ b/Frontend/open-wallet/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -30,6 +31,7 @@
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.8",
+    "primeicons": "^7.0.0",
     "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
