--- a/be/package.json
+++ b/be/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "tsx": "^4.20.5"
   }
 }
