--- a/be/package.json
+++ b/be/package.json
@@ -25,6 +25,7 @@
     "jose": "^6.1.0",
     "multer": "^2.0.2",
     "pkijs": "^3.2.5",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "uuid": "^13.0.0"
   }
 }
