--- a/Frontend/open-wallet/angular.json
+++ b/Frontend/open-wallet/angular.json
@@ -30,6 +30,7 @@
               }
             ],
             "styles": [
+              "src/app/theme/typography.scss",
               "src/styles.scss"
             ]
           },
@@ -88,6 +89,7 @@
               }
             ],
             "styles": [
+              "src/app/theme/typography.scss",
               "src/styles.scss"
             ]
           }
