--- a/Frontend/open-wallet/package.json
+++ b/Frontend/open-wallet/package.json
@@ -29,6 +29,8 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.8",
     "primeicons": "^7.0.0",
