--- a/be/package.json
+++ b/be/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.3",
     "ts-node-dev": "^2.0.0",
@@ -25,6 +26,7 @@
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pkijs": "^3.2.5",
     "tsx": "^4.20.5",
